<resources>
    <string name="parse_app_id">zd52JkKu8Cqzc6BNmpJIRDCFdTL96So54mWw2O1z</string>
    <string name="parse_client_key">iLa1at4sEmOKJlXLMYDhkuL1v7iZwEIH1AssqtjY</string>

    <string name="app_name">Hiit</string>
    <string name="tab_rss">Główna</string>
    <string name="tab_participate">Biorę udział</string>
    <string name="tab_account">Konto</string>
    <string name="hint_username">Nazwa użytkownika</string>
    <string name="hint_mail">Adres e-mail</string>
    <string name="hint_password">Hasło</string>
    <string name="hint_password_repeat">Powtórz hasło</string>
    <string name="already_have_account">Mam konto</string>
    <string name="sign_me_up">Zarejestruj</string>
    <string name="log_me_in">Zaloguj</string>
    <string name="fill_input">Uzupełnij pole</string>
    <string name="hint_title">Nazwa</string>
    <string name="hint_localization">Dodaj lokalizację</string>
    <string name="hint_description">Dodaj opis</string>
    <string name="hint_technology">Wybierz technologię</string>
    <string name="subscriptions">Subskrypcje</string>
    <string name="notifications">Powiadomienia</string>
    <string name="my_events">Moje wydarzenia</string>
    <string name="history">Historia</string>
    <string name="add_event">Nowe wydarzenie</string>
    <string name="event_save">Zapisz</string>
    <string name="error_msg_not_valid_form">Popraw pola.</string>
    <string name="error_msg_default">Wystąpił błąd.</string>
    <string name="error_msg_noconnection">Brak połączenia z internetem.</string>
    <string name="dialog_msg_on_saving">Trwa zapisywanie...</string>
    <string name="error_msg_server_error">Wystąpił błąd serwera.</string>
    <string name="hint_date">Wybierz dzień</string>
    <string name="hint_time">godzina</string>
    <string name="empty">Brak wydarzeń</string>
    <string name="empty_no_subs">Najpierw zasubskrybuj technologię</string>
    <string name="event_organizer">Organizator</string>
    <string name="event_quit">Wypisz</string>
    <string name="event_edit">Edytuj</string>
    <string name="event_cancel">Odwołaj</string>
    <string name="dialog_cancel">Anuluj</string>
    <string name="dialog_msg_cancel">Czy napewno chcesz odwołać to wydarzenie?</string>
    <string name="dialog_msg_on_canceling">Trwa odwoływanie...</string>
    <string name="empty_enrolled">Nie bierzesz udziału w żadnym wydarzeniu</string>
    <string name="empty_subs">Nie subskrybujesz żadnej technologii</string>
    <string name="hint_search_technology">Wyszukaj technologię...</string>
    <string name="add_subscription">Dodano do subskrypcji.</string>
    <string name="dialog_msg_logout">Jesteś pewny, że chcesz się wylogować?</string>
    <string name="dialog_logout">Wyloguj</string>
    <string name="dialog_msg_on_logout">Wylogowuje...</string>
    <string name="empty_ownevents">Obecnie nie organizujesz żadnego wydarzenia</string>
    <string name="ownEvents">Moje wydarzenia</string>
    <string name="postfix_userCounter"> uczestnik/ów</string>
    <string name="historyTab_participated">Wziąłem udział</string>
    <string name="historyTab_organized">Zorganizowałem</string>
    <string name="error_msg_user_doesnt_exist">Użytkownik nie istnieje</string>
    <string name="error_msg_login">Błąd logowania</string>
    <string name="error_msg_sub_involved">Musisz subskrybować technologię, w ramach której organizujesz wydarzenia</string>

</resources>
