<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:ignoreGravity="@+id/logo"
    android:paddingLeft="32dp"
    android:paddingRight="32dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_app_logo" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo">

        <EditText
            android:id="@+id/signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_username">

        <EditText
            android:id="@+id/signup_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mail"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_mail">

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_password_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_password">

        <EditText
            android:id="@+id/signup_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:hint="@string/hint_password_repeat"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_password_repeat"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            app:mrl_rippleOverlay="true">

            <TextView
                android:id="@+id/log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/already_have_account"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </com.balysv.materialripple.MaterialRippleLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            app:mrl_rippleOverlay="true">

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="8dp"
                android:text="@string/sign_me_up"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </com.balysv.materialripple.MaterialRippleLayout>
    </RelativeLayout>
</RelativeLayout>