<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:counterEnabled="true"
            app:counterMaxLength="25">

            <EditText
                android:id="@+id/event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_title" />
        </android.support.design.widget.TextInputLayout>

        <!--<View style="@style/Divider" />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_1"
            android:layout_marginRight="@dimen/keyline_1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_tech"
                style="@style/FormIcon"
                android:layout_marginRight="8dp"
                android:layout_centerVertical="true"
                android:layout_gravity="top"
                android:src="@drawable/ic_event_technology" />

            <Spinner
                android:id="@+id/tech_spinner"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ic_tech"
                android:layout_width="match_parent"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_1"
            android:layout_marginRight="@dimen/keyline_1">

            <ImageView
                android:id="@+id/ic_date"
                style="@style/FormIcon"
                android:layout_gravity="top"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_event_datetime" />

            <TextView
                android:id="@+id/event_date"
                style="@style/FormTextView"
                android:layout_toEndOf="@id/ic_date"
                android:text="@string/hint_date" />


            <TextView
                android:id="@+id/event_time"
                style="@style/FormTextView"
                android:layout_alignParentEnd="true"
                android:text="@string/hint_time" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_1"
            android:layout_marginRight="@dimen/keyline_1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_place"
                style="@style/FormIcon"
                android:layout_centerVertical="true"
                android:layout_gravity="top"
                android:src="@drawable/ic_event_place" />

            <EditText
                android:id="@+id/event_localization"
                style="@style/FormEditText"
                android:layout_toRightOf="@id/ic_place"
                android:hint="@string/hint_localization"
                android:singleLine="true" />
        </RelativeLayout>

        <View
            style="@style/Divider"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="16dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_1"
            android:layout_marginRight="@dimen/keyline_1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ic_desc"
                style="@style/FormIcon"
                android:layout_gravity="top"
                android:layout_marginTop="@dimen/keyline_1"
                android:adjustViewBounds="false"
                android:src="@drawable/ic_event_description" />

            <EditText
                android:id="@+id/event_description"
                style="@style/FormEditText"
                android:layout_toRightOf="@id/ic_desc"
                android:hint="@string/hint_description"
                android:inputType="textMultiLine" />
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_marginBottom="?attr/actionBarSize"
            style="@style/AppTheme.ProgressBar"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>