<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:ignoreGravity="@+id/logo"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_username_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo">

            <EditText
                android:id="@+id/login_username_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_username"
                android:inputType="textPersonName"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_username_mail">

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:fontFamily="sans-serif"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>


    <com.balysv.materialripple.MaterialRippleLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_password"
        android:layout_marginTop="24dp"
        app:mrl_rippleOverlay="true"
        >
        <TextView
            android:id="@+id/log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/log_me_in"
            android:padding="8dp"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAlignment="center" />
    </com.balysv.materialripple.MaterialRippleLayout>

</RelativeLayout>