<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/keyline_1"
        android:layout_marginRight="@dimen/keyline_1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_tech"
            style="@style/FormIcon"
            android:layout_centerVertical="true"
            android:layout_gravity="top"
            android:src="@drawable/ic_event_technology" />

        <TextView
            android:id="@+id/event_technology"
            style="@style/FormEditText"
            android:layout_width="match_parent"
            android:layout_toEndOf="@id/ic_tech"
            android:text="@string/hint_technology" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/keyline_1"
        android:layout_marginRight="@dimen/keyline_1">

        <ImageView
            android:id="@+id/ic_date"
            style="@style/FormIcon"
            android:layout_gravity="top"
            android:layout_marginTop="14dp"
            android:src="@drawable/ic_event_datetime" />

        <TextView
            android:id="@+id/event_date"
            style="@style/FormTextView"
            android:layout_toEndOf="@id/ic_date"
            android:text="niedziela, 29 mar 2015" />


        <TextView
            android:id="@+id/event_time"
            style="@style/FormTextView"
            android:layout_alignParentEnd="true"
            android:text="20:15" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/keyline_1"
        android:layout_marginRight="@dimen/keyline_1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_place"
            style="@style/FormIcon"
            android:layout_centerVertical="true"
            android:layout_gravity="top"
            android:src="@drawable/ic_event_place" />

        <EditText
            android:id="@+id/localization"
            style="@style/FormEditText"
            android:layout_toRightOf="@id/ic_place"
            android:hint="@string/hint_localization"
            android:singleLine="true" />
    </RelativeLayout>

    <View
        style="@style/Divider"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="16dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/keyline_1"
        android:layout_marginRight="@dimen/keyline_1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ic_desc"
            style="@style/FormIcon"
            android:layout_gravity="top"
            android:layout_marginTop="@dimen/keyline_1"
            android:adjustViewBounds="false"
            android:src="@drawable/ic_event_description" />

        <EditText
            android:id="@+id/description"
            style="@style/FormEditText"
            android:layout_toRightOf="@id/ic_desc"
            android:hint="@string/hint_description"
            android:inputType="textMultiLine" />
    </RelativeLayout>
</LinearLayout>